@@ -27,10 +27,10 @@
     <viewlet name="vnccollab.theme.addbutton"/>
     <viewlet name="plone.searchbox"/>
     <viewlet name="plone.global_sections"/>
-    <viewlet name="vnccollab.theme.toptabs"/>
     <viewlet name="jarn.xmpp.core.ui"/>
-    <viewlet name="plone.path_bar"/>
     <viewlet name="vnccollab.theme.languageselector"/>
+    <viewlet name="vnccollab.theme.toptabs"/>
+    <viewlet name="plone.path_bar"/>
   </order>
   <order manager="plone.belowcontent" skinname="VNC Collaboration Theme">
     <viewlet name="plone.belowcontenttitle.keywords"/>
